Fix T38808: image opened with 'relative path', gets absolute path